--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd1f2c86c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f86bdc40110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1f30aeb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd1f30aed10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f86bd5cbc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f86bd5cbe10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1f3653410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd1f3653610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f86bdb70590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f86bdb70790&gt;]</pre>
 </div>
 
 </div>
