--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f53e3594850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b739f8490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53e2f22c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53e2f22e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b739b4d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9b739b4fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53e34c4550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53e34c4750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b73f59690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9b73f598d0&gt;]</pre>
 </div>
 
 </div>
