--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f725fc01bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff3c7b76d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f725ed2fc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f725ed2fe90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3c7be9d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff3c7be9f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f725f2d4610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f725f2d4810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3c8192690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff3c8192890&gt;]</pre>
 </div>
 
 </div>
