--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce52481790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbacc04c210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fce527a70d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fce52d8b1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbacb9cee50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbacbf9a050&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fce52d5aa10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fce52d62b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbacbf72790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbacbf72990&gt;]</pre>
 </div>
 
 </div>
