--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb03d98c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0d72438550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb02f79cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb02f79f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d71dfbdd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d71dfbfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb03520650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb03520890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d7239f7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d7239f9d0&gt;]</pre>
 </div>
 
 </div>
