--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f246ea34d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f30c864d710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f246dc14d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f246df73350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f30c776dc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f30c776de10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f246e1bb590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f246e1bb790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f30c7d1a4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f30c7d1a6d0&gt;]</pre>
 </div>
 
 </div>
