--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f30c864d710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85e2babed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f30c776dc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f30c776de10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85e2878b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85e2878d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f30c7d1a4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f30c7d1a6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85e2e1d450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85e2e1d650&gt;]</pre>
 </div>
 
 </div>
