--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0058f44e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2910f2a8d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0058c14c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0058c14e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2910bfcb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2910bfcd10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f00591b6610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f00591b6810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f291119e490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f291119e690&gt;]</pre>
 </div>
 
 </div>
