--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0885003dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8791d79f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0884148d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0884148f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8790ea9dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8790ea9fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f08846ec6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f08846ec8d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8791452790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8791452990&gt;]</pre>
 </div>
 
 </div>
