--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd7a7e32690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6477702090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7a7b80e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd7a8149050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6476837b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6476837d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7a81246d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd7a8124910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6476dda490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6476dda690&gt;]</pre>
 </div>
 
 </div>
