--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b445f65d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f12e954e090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b43fb6c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b43fb6e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f12e91afcd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12e91afed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b4455f5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b4455f810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f12e9757650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12e9757850&gt;]</pre>
 </div>
 
 </div>
