--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f55570b5490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f69a8cfac10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5557083790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5557095c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f69a89c9b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f69a89c9d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f555762b090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5557637590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f69a8f6e590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f69a8f6e790&gt;]</pre>
 </div>
 
 </div>
