--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f69a8cfac10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98ffac8b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f69a89c9b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f69a89c9d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98ff49ae10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98ff49af90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f69a8f6e590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f69a8f6e790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98ffa41710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98ffa41910&gt;]</pre>
 </div>
 
 </div>
