--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca84ffd4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f15474dfbd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca84c72c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca84c72e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1546e96cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1546e96ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca85218610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca85218810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f154743b510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f154743b710&gt;]</pre>
 </div>
 
 </div>
