--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f57935e3fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f908968c5d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5793bcfd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5793bcff90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f90896d3cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f90896d3f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5794176650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5794176890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9089c79650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9089c79890&gt;]</pre>
 </div>
 
 </div>
