--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6189a02b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8fd9c6ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f61893b4cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f61893b4ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8fd664a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8fd664c10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f618995b650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f618995b850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8fdc39390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8fdc39590&gt;]</pre>
 </div>
 
 </div>
