--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5d1ab15e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdc10328fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d1af3db90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5d1af3ddd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc0fff2d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc0fff2f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d1b4e1490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5d1b4e16d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc10599690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc10599890&gt;]</pre>
 </div>
 
 </div>
